3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

common/shstr.c, include/libproto.h: Use the new sstring typedef in shstr.c
Alex Schultz 2007-03-22

Change party, region, friendlylist plugin API.
 include/sproto.h
 plugins/cfanim/include/cfanim_proto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2007-03-22

Change archetype plugin API.
 plugins/cfanim/include/cfanim_proto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2007-03-21

server/egoitem.c: Removed blank file.
Alex Schultz 2007-03-21

Changes to plugin API: start to use a (type)* parameter instead of returning a value
 cast to void*. This removes static variables.
 Also add Object.PermExp and Object.ExpMul to Python.
 include/plugin.h: add CFAPI_MOVETYPE type.
 plugins/common/include/plugin_common.h: add many wrappers.
 plugins/common/plugin_common.c: wrappers, new calling syntax.
 plugins/cfpython/cfpython_object.c: clean calls to common plugin.
 plugins/cfpython/include/cfpython_object_private.h: some more properties.
 server/plugins.c: change cfapi_object_get_property.
---
include/global.h: new type, 'sstring', to be used for shared strings.
---
common/loader.l: fix crash when object is missing archetype.
Nicolas Weeger 2007-03-21

server/monster.c: documentation and indent, no functional change.
Nicolas Weeger 2007-03-18

Implement feature request #1528522: Initial items should be applied/worn.
 server/player.c
---
 server/apply.c skill_util.c: keep the AP_NOPRINT flag for subcalls.
---
 server/c_wiz.c: update DM's view when using nodm.
---